[gd_scene load_steps=4 format=3 uid="uid://q02wouk8nmus"]

[ext_resource type="Script" uid="uid://pjpchjqpak31" path="res://Scripts/others/titles.gd" id="1_ck0va"]
[ext_resource type="AudioStream" uid="uid://dpfjtspnny4h3" path="res://sounds/sfx_sounds/choose_button.mp3" id="2_ck0va"]
[ext_resource type="PackedScene" uid="uid://cxf4k7o2x66yv" path="res://Scenes/effects/animation_collision.tscn" id="3_2ih46"]

[node name="demo" type="Node2D"]
top_level = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = -1

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="titles" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ck0va")
metadata/_edit_use_anchors_ = true

[node name="demo" type="Label" parent="CanvasLayer/titles"]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.414
anchor_bottom = 0.146
offset_right = -0.0800171
offset_bottom = -0.12001
rotation = 0.000537067
theme_override_font_sizes/font_size = 200
text = "TEST MESSAGE

"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="demo2" type="Label" parent="CanvasLayer/titles"]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.408
anchor_bottom = 0.146
offset_right = 0.23999
offset_bottom = -0.12001
rotation = 0.000537067
theme_override_font_sizes/font_size = 30
text = "TEST MESSAGE

"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="sound_demo" type="AudioStreamPlayer" parent="CanvasLayer/titles"]
stream = ExtResource("2_ck0va")
mix_target = 1

[node name="animation_collision" parent="." instance=ExtResource("3_2ih46")]
layer = 0
